Ajusta a configuração de Locale para aceitar vírgula como separador decimal e simplifica comentários no código da classe ContaTerminal.